# tamil-ocr

./: .gitignore  README.md  pyproject.toml
tamil_ocr/: __init__.py  _surya.py  _types.py  cli.py
