[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tamil-ocr"
version = "0.1.0"
description = "Tamil PDF OCR using Surya — extract text page by page"
requires-python = ">=3.10"
dependencies = [
    "surya-ocr",
    "pymupdf",
    "pillow",
]

[project.scripts]
tamil-ocr = "tamil_ocr.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tamil_ocr*"]
